--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -11,7 +11,7 @@
         <span class="material-icons-outlined">filter_list</span><span>Filter Items</span>
     </button>
     
-    <button class="textBtn" @onclick="AddItems">
+    <button class="textBtn" @onclick="@AddItems">
         <span class="material-icons-outlined">add_photo_alternate</span><span>Add to Library</span>
     </button>
     
@@ -34,29 +34,13 @@
 </div>
 
 <TwoChoiceInput TwoChoiceVis="@promptVis" YesBtnClick="@(() => DeleteErrors())" NoBtnClick="@(() => { promptVis = "hidden"; StateHasChanged(); })" Message="@message"/>
+<AlbumSelector @ref="@albumSelector" AlbumsVis="@albumsDivVisibility" SelectedItems="@allPaths" ShowCheckCancelButtons="false"/>
 
 @{
     GC.Collect();
     GC.WaitForPendingFinalizers();
     if (applied) return;
     UpdateStatus();
-
-    <div id="textAndAlbums" style="visibility: @albumsDivVisibility">
-        <span>Add Items to Albums</span>
-        <div id="albums">
-            @for (int i = 0; i < albums.Count; i++)
-            {
-                int ii = i;
-                <div class="album" @onclick="@(() => checkedAlbums[ii] = !checkedAlbums[ii])">
-                    <div class="coverDiv">
-                        <img src="@PSS.Settings.requestPath/@albums[i].albumCover" alt="">
-                    </div>
-                    <input type="checkbox" id="@i" @bind="@checkedAlbums[ii]" @bind:event="oninput">
-                    <span title="@albums[i].name">@albums[i].name</span>
-                </div>
-            }
-        </div>
-    </div>
 
     <div id="mainDiv">
         @for (int i = 0; i < allPaths.Count; i++)
@@ -96,6 +80,8 @@
 }
 
 @code{
+    AlbumSelector albumSelector = new();
+
     private static bool applied = false;
     private static string status;
     private static List<string> pngPaths;
@@ -168,7 +154,7 @@
     }
 
     //Adds all the items to photo library, and, if applicable, any albums.
-    private static void AddItems()
+    private void AddItems()
     {
         applied = true;
         int rowsAffected = 0;
@@ -194,21 +180,10 @@
             {
                 Console.WriteLine(e.Message);
             }
-
-            //Add item to album(s) selected.
-            for (int c = 0; c < checkedAlbums.Count; c++)
-            {
-                if (!checkedAlbums[c]) continue;
-                try
-                {
-                    Connection.AddToAlbum(newShortPath, albums[c].id);
-                }
-                catch (Exception e)
-                {
-                    Console.WriteLine(e.Message);
-                }
-            }
         }
+        
+        albumSelector.ConfirmBtnClick();
+        
         status = $"Added {rowsAffected} items to library";
         applied = false;
     }
