--- a/PSS/Shared/AlbumSelector.razor
+++ b/PSS/Shared/AlbumSelector.razor
@@ -6,10 +6,13 @@
 
     <div id="header">
         <span>Add to</span>
-        <div id="buttons">
-            <button class="iconBtn" @onclick="CloseBtnClick"><span class="material-icons-outlined">close</span></button>
-            <button class="iconBtn" @onclick="ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
-        </div>
+        @if (ShowCheckCancelButtons)
+        {
+            <div id="buttons">
+                <button class="iconBtn" @onclick="CloseBtnClick"><span class="material-icons-outlined">close</span></button>
+                <button class="iconBtn" @onclick="ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
+            </div>
+        }
     </div>
     
     <div id="albumCreatorDiv"><AlbumCreator Albums="@(albums.Concat(folders).ToList())"/></div>
@@ -72,6 +75,9 @@
     
     [Parameter]
     public EventCallback<string> AlbumsVisChanged { get; set; }
+
+    [Parameter]
+    public bool ShowCheckCancelButtons { get; set; } = true; //Show 2 buttons in top right (turned off for UploadApply).
     
     [Inject]
     public IJSRuntime JSRuntime { get; set; }
@@ -118,7 +124,7 @@
     }
 
     //Add item(s) to album(s) or folder selected.
-    private async void ConfirmBtnClick()
+    public async void ConfirmBtnClick()
     {
         if (checkedFolderIndex != -1) //If a folder is selected this won't be -1
             foreach (string item in SelectedItems) AddToAlbum(item, folders[checkedFolderIndex].id);
