AV now says either album or folder here

--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -254,7 +254,7 @@
 
         yesBtnFunc = DeleteAlbum;
         choiceVis = "visible";
-        choiceMsg = $"Permanently Delete Album \"{albumName}\"?";
+        choiceMsg = "Permanently Delete " + (isFolder ? "Folder" : "Album") + $" \"{albumName}\"?";
     }
     
     private void DeleteAlbum()
