gave Upload btn an icon and better text

--- a/PSS/Pages/Upload.razor
+++ b/PSS/Pages/Upload.razor
@@ -10,7 +10,7 @@
         {
             <div id="applyContainer">
                 <span>Items found on server waiting to be added</span>
-                <button onclick="location.href='apply-upload'">Add to Library</button>
+                <button class="textBtn"><span class="material-icons-outlined">add_photo_alternate</span><a href="apply-upload">Go to Upload Apply</a></button>
             </div>
         }
 
