--- a/PSS/wwwroot/css/Upload.css
+++ b/PSS/wwwroot/css/Upload.css
@@ -21,27 +21,12 @@
     align-items: center;
 }
 
-#applyContainer span {
+#applyContainer > span {
     font-size: 25px;
 }
 
-#applyContainer button {
+#applyContainer > button {
     margin-left: 24px;
-    margin-top: 3px;
-    background-color: black;
-    border: 1px solid white;
-    font-size: 18px;
-    font-weight: 400;
-    border-radius: 4px;
-    align-items: center;
-    letter-spacing: .01785714em;
-    width: 150px;
-    height: 45px;
-}
-
-#applyContainer button:hover {
-    background-color: rgba(211, 211, 211, 0.1);
-    cursor: pointer;
 }
 
 #folderContainer {
@@ -53,12 +38,12 @@
     align-items: center;
 }
 
-#folderContainer span {
+#folderContainer > span {
     font-size: 25px;
     margin-top: 11px;
 }
 
-#folderContainer input[type="text"] {
+#folderContainer > input[type="text"] {
     color: black;
     font-size: 20px;
     margin-top: 10px;
