trying out this nuget package for keeb shortcuts. Promising so far

--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -1,18 +1,35 @@
 @*A blank page just for testing stuff*@
 @page "/test"
-@using System.IO
-@using PSS.Backend
+@implements IDisposable 
+@using Toolbelt.Blazor.HotKeys
+@inject HotKeys HotKeys 
 
 <title>Test</title>
 
 @{
-    //Generate dummy data
-    // for (int i = 0; i < 40; i++) Connection.InsertMedia("item " + i, DateTime.Now);
-    
-    // string[] paths = Directory.GetDirectories(PSS.Settings.libFolderFullPath, "*", SearchOption.AllDirectories);
-    // paths = paths.Concat(Directory.GetDirectories(PSS.Settings.uploadRootPath, "*", SearchOption.AllDirectories)).ToArray();
+}
 
-    // paths = paths.Reverse().ToArray(); //Start at deepest folder and work up (to avoid dir not found errors).
-    // foreach (string path in paths)
-        // if (Backend.Maintenance.IsFolderEmpty(path)) Directory.Delete(path, true);
+@code {
+    
+    HotKeysContext HotKeysContext;
+
+    protected override void OnInitialized()
+    {
+        HotKeysContext = HotKeys.CreateContext()
+            .Add(ModKeys.Ctrl | ModKeys.Shift, Keys.A, FooBar, "do foo bar.")
+            .Add(ModKeys.Ctrl, Keys.D, bar);
+    }
+
+    void FooBar()
+    {
+        Console.WriteLine("foobar");
+    }
+
+    void bar() => Console.WriteLine("foo");
+
+    public void Dispose()
+    {
+        HotKeysContext.Dispose();
+    }
+
 }
