--- a/PSS/Shared/ShortcutsReference.razor
+++ b/PSS/Shared/ShortcutsReference.razor
@@ -1,3 +1,8 @@
 @* Overlay thing for showing all the shortcuts in PSS *@
 <link href="/css/components/ShortcutsReference.css" rel="stylesheet">
 
+<div id="reference">
+    <div id="header">
+        <span>Keyboard shortcuts</span>
+    </div>
+</div>
