keeb reference lookin good

--- a/PSS/Shared/ViewItem.razor
+++ b/PSS/Shared/ViewItem.razor
@@ -33,7 +33,7 @@ Required Parameters:
             altS="@(() => Connection.UpdateStarred(path, !starred))"
         />
         
-        <ShortcutsReference></ShortcutsReference>
+        if (true){<ShortcutsReference></ShortcutsReference>}
         
         @*Stuff in top right corner*@
         <div id="buttons">
