--- a/PSS/Shared/ShortcutsReference.razor
+++ b/PSS/Shared/ShortcutsReference.razor
@@ -3,6 +3,29 @@
 
 <div id="reference">
     <div id="header">
-        <span>Keyboard shortcuts</span>
+        <span>Keyboard Shortcuts</span>
+    </div>
+
+    <div id="allShortcuts">
+        <div class="shortcut">
+            <code>Ctrl /</code>
+            <span>Show this</span>
+        </div>
+        <div class="shortcut">
+            <code>Ctrl D</code>
+            <span>Delete this item</span>
+        </div>
+        <div class="shortcut">
+            <code>Ctrl E</code>
+            <span>Edit Date Taken</span>
+        </div>
+        <div class="shortcut">
+            <code>Alt A</code>
+            <span>Add to album</span>
+        </div>
+        <div class="shortcut">
+            <code>Alt S</code>
+            <span>Star/Unstar</span>
+        </div>
     </div>
 </div>
