--- a/PSS/wwwroot/css/components/ShortcutsReference.css
+++ b/PSS/wwwroot/css/components/ShortcutsReference.css
@@ -1,6 +1,6 @@
 #reference {
-    width: 500px;
-    height: 500px;
+    width: 230px;
+    height: 230px;
     z-index: 9999;
     position: absolute;
     left: 50%;
@@ -16,9 +16,25 @@
     height: 65px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 #reference > #header > span {
-    margin-left: 36px;
     font-size: 20px;
+}
+
+#reference > #allShortcuts {
+    position: absolute;
+    left: 28px;
+    top: 65px;
+    display: flex;
+    flex-direction: column;
+}
+
+#reference > #allShortcuts > .shortcut {
+    margin-bottom: 12px;
+}
+
+#reference > #allShortcuts > .shortcut > span {
+    margin-left: 10px;
 }
