removing reference for rn cuz it's buggy and doesn't work well

--- a/PSS/Shared/ViewItem.razor
+++ b/PSS/Shared/ViewItem.razor
@@ -33,10 +33,10 @@ Required Parameters:
             AltS="@(() => Connection.UpdateStarred(path, !starred))"
         />
 
-        if (ShortcutsReference.visibility == "visible")
+        @*if (ShortcutsReference.visibility == "visible")
         {
             <ShortcutsReference CtrlDText="Delete this item" CtrlEText="Edit Date Taken" AltAText="Add to album" AltSText="Star/Unstar"/>
-        }
+        }*@
 
         @*Stuff in top right corner*@
         <div id="buttons">
