--- a/PSS/Shared/KeyboardShortcuts.razor
+++ b/PSS/Shared/KeyboardShortcuts.razor
@@ -24,7 +24,7 @@
         HotKeysContext = HotKeys.CreateContext()
             .Add(ModKeys.Ctrl, Keys.D, CtrlD)
             .Add(ModKeys.Ctrl, Keys.E, CtrlE)
-            .Add(ModKeys.Ctrl, Keys.Slash, () => ShortcutsReference.visibility = ShortcutsReference.visibility == "hidden" ? "visible" : "hidden")
+            // .Add(ModKeys.Ctrl, Keys.Slash, () => ShortcutsReference.visibility = ShortcutsReference.visibility == "hidden" ? "visible" : "hidden")
             .Add(ModKeys.Alt, Keys.A, AltA)
             .Add(ModKeys.Alt, Keys.S, AltS);        
     }
