--- a/PSS/Pages/Starred.razor
+++ b/PSS/Pages/Starred.razor
@@ -20,6 +20,10 @@
     <AlbumSelector SelectedItems="@selectedItems" @bind-HeaderVis="@headerVis" @bind-AlbumsVis="@albumsVis"/>
     <TwoChoiceInput @bind-TwoChoiceVis="@choiceVis" YesBtnClick="@DeleteSelected" NoBtnClick="@CloseChoiceDiv" Message="@choiceMsg"/>
 
+    <KeyboardShortcuts
+        CtrlD="@(() => { DeleteBtnClick(); StateHasChanged(); })"
+        AltA="@(() => { albumsVis = "visible"; StateHasChanged(); })" />
+
     if (starredList.Count == 0)
     {
         <h1>Starred items appear here</h1>
