doing alt left in ViewItem now takes you to previous page just like big left arrow btn does
E.g., if you were in Index and moving around in ViewItem and hit !Left, you'd end up at / instead of the prev ViewItem

--- a/PSS/Shared/KeyboardShortcuts.razor
+++ b/PSS/Shared/KeyboardShortcuts.razor
@@ -1,6 +1,7 @@
 @implements IDisposable 
 @using Toolbelt.Blazor.HotKeys
 @inject HotKeys HotKeys
+@inject NavigationManager navigationManager
 
 @code {
     public void Dispose() => HotKeysContext.Dispose();
@@ -17,6 +18,9 @@
     public Action AltA { get; set; }
     
     [Parameter]
+    public Action AltLeft { get; set; }
+    
+    [Parameter]
     public Action AltS { get; set; }
     
     protected override void OnInitialized()
@@ -24,6 +28,7 @@
         HotKeysContext = HotKeys.CreateContext()
             .Add(ModKeys.Ctrl, Keys.D, CtrlD)
             .Add(ModKeys.Ctrl, Keys.E, CtrlE)
+            .Add(ModKeys.Alt, Keys.Left, AltLeft)
             // .Add(ModKeys.Ctrl, Keys.Slash, () => ShortcutsReference.visibility = ShortcutsReference.visibility == "hidden" ? "visible" : "hidden")
             .Add(ModKeys.Alt, Keys.A, AltA)
             .Add(ModKeys.Alt, Keys.S, AltS);        
