--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -50,6 +50,23 @@
         <button class="textBtn" @onclick="@CancelBtnClicked"><span class="material-icons-outlined">close</span><span>Cancel</span></button>
         <button class="textBtn" @onclick="@ResetBtnClicked"><span class="material-icons-outlined">restart_alt</span><span>Reset</span></button>
     </div>
+    
+    <div id="shortcuts">
+        <span class="header" onclick="document.getElementById('allShortcuts').style.display = 'inline'">Keyboard Shortcuts</span>
+        <div id="allShortcuts" style="display: none">
+            <span class="smallHeader">Index/Starred/Album View</span>
+            <div><code>Ctrl D</code><span>Delete Selected</span></div>
+            <div><code>Alt A</code><span>Show Album Selector</span></div>
+            <div><code>Alt S</code><span>Add/Remove Star in Index and AV</span></div>
+            
+            <span class="smallHeader">View Item</span>
+            <div><code>Ctrl D</code><span>Delete Item</span></div>
+            <div><code>Ctrl E</code><span>Edit Date Taken</span></div>
+            <div><code>Alt A</code><span>Show Album Selector</span></div>
+            <div><code>Alt Left</code><span>Go Back</span></div>
+            <div><code>Alt S</code><span>Add/Remove Star</span></div>
+        </div>
+    </div>
 
     <div>
         <span class="header">Maintenance</span>
