--- a/PSS/wwwroot/css/Settings.css
+++ b/PSS/wwwroot/css/Settings.css
@@ -47,6 +47,31 @@
     width: 100%;
 }
 
+#body > #shortcuts > div {
+    margin-left: 8px;
+}
+
+#body > #shortcuts > div > .smallHeader {
+    display: block;
+    font-size: 21px;
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+#body > #shortcuts > div > div {
+    margin-bottom: 10px;
+}
+
+#body > #shortcuts > div > div > code {
+    background-color: #484747;
+    margin-right: 10px;
+    font-size: 18px;
+}
+
+#body > #shortcuts > div > div > span {
+    font-size: 18px;
+}
+
 #body > #debugDiv > div {
     display: flex;
     align-items: center;
