--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -57,7 +57,7 @@
             <span class="smallHeader">Index/Starred/Album View</span>
             <div><code>Ctrl D</code><span>Delete Selected</span></div>
             <div><code>Alt A</code><span>Show Album Selector</span></div>
-            <div><code>Alt S</code><span>Add/Remove Star in Index and AV</span></div>
+            <div><code>Alt S</code><span>Show Star Menu in Index and AV</span></div>
             
             <span class="smallHeader">View Item</span>
             <div><code>Ctrl D</code><span>Delete Item</span></div>
