add ctrl and shift info in settings

--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -54,12 +54,13 @@
     <div id="shortcuts">
         <span class="header" onclick="document.getElementById('allShortcuts').style.display = 'inline'">Keyboard Shortcuts</span>
         <div id="allShortcuts" style="display: none">
-            <span class="smallHeader">Index/Starred/Album View</span>
+            <span>Index/Starred/Album View</span>
             <div><code>Ctrl D</code><span>Delete Selected</span></div>
             <div><code>Alt A</code><span>Show Album Selector</span></div>
             <div><code>Alt S</code><span>Show Star Menu in Index and AV</span></div>
-            
-            <span class="smallHeader">View Item</span>
+            <div><span>Any pages like these ones all support Ctrl and Shift. Ctrl is an alternative to the small check button and Shift is for selecting multiple items.</span></div>
+
+            <span>View Item</span>
             <div><code>Ctrl D</code><span>Delete Item</span></div>
             <div><code>Ctrl E</code><span>Edit Date Taken</span></div>
             <div><code>Alt A</code><span>Show Album Selector</span></div>
